Fix spacing issues with build icons

--- a/resources/assets/css/components/pieces/page_header.less
+++ b/resources/assets/css/components/pieces/page_header.less
@@ -55,10 +55,15 @@
     > .actions {
       .flexy(center);
 
+      justify-content: space-between;
+
       > * {
         margin-left: 1em;
+        &:first-child {
+            margin-left: 0;
+        }
         @media (max-width: @screen-sm-max) {
-          margin-left: 0;
+          // margin-left: 0;
 
           &:first-child {
             margin-top: 1em;
